--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-scripts": "5.0.1",
     "sass": "^1.59.3",
     "typescript": "^4.9.5",
