--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.43.9",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
@@ -50,6 +51,7 @@
     ]
   },
   "devDependencies": {
-    "@types/js-cookie": "^3.0.3"
+    "@types/js-cookie": "^3.0.3",
+    "@types/react-helmet": "^6.1.6"
   }
 }
