--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/js-cookie": "^3.0.3",
     "@types/react-input-mask": "^3.0.2",
     "@types/webpack": "^5.28.5",
+    "@types/webpack-bundle-analyzer": "^4.6.3",
     "@types/webpack-dev-server": "^4.7.2",
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.3",
@@ -58,6 +59,7 @@
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "webpack": "^5.89.0",
+    "webpack-bundle-analyzer": "^4.10.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   }
