--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
     "@svgr/webpack": "^8.1.0",
     "@types/js-cookie": "^3.0.3",
     "@types/react-input-mask": "^3.0.2",
@@ -55,6 +56,8 @@
     "fork-ts-checker-webpack-plugin": "^9.0.2",
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
+    "react-refresh": "^0.14.0",
+    "react-refresh-typescript": "^2.0.9",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.5.1",
